--- a/formation-stream/build.gradle
+++ b/formation-stream/build.gradle
@@ -1,15 +1,12 @@
 plugins {
-    id 'com.github.johnrengelman.shadow' version '2.0.1'
+    id 'com.github.johnrengelman.shadow' version '2.0.4'
+    id 'scala'
 }
 
 group 'io.saagie'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'scala'
-
 sourceCompatibility = JavaVersion.VERSION_1_8
-
-ext.mainClassName = "Stream"
 
 repositories {
     jcenter()
@@ -18,6 +15,7 @@ repositories {
 dependencies {
     compileOnly group: 'org.apache.spark', name: "spark-core_$scalaMajor", version: spark
     compileOnly group: 'org.apache.spark', name: "spark-sql_$scalaMajor", version: spark
+
     compile group: 'org.apache.spark', name: "spark-streaming_$scalaMajor", version: spark
     compile group: 'org.apache.spark', name: "spark-streaming-kafka-0-10_$scalaMajor", version: spark
     compile group: 'org.apache.spark', name: "spark-sql-kafka-0-10_$scalaMajor", version: spark
@@ -25,7 +23,4 @@ dependencies {
 
 shadowJar {
     zip64 = true
-    manifest {
-        attributes "Main-Class": mainClassName
-    }
 }
